feat: contests module
